add initial appendChild functions

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
         <p>Time: <span></span></p>
     </header>
     <main>
-        <div class="start">
-            <h1>Coding Quiz Challenge</h1>
-            <p>Try to answer the following questions in the time. But warning! Each wrong answer will take away some of your time. Are you ready?</p>
-            <button id="start">Start Quiz?</button>
+        <div id="question-container">
+            <div class="start" id="start-div">
+                <h1>Coding Quiz Challenge</h1>
+                <p>Try to answer the following questions in the time. But warning! Each wrong answer will take away some of your time. Are you ready?</p>
+                <button id="startbtn">Start Quiz?</button>
+            </div>
         </div>
 <!-- 
         <div class="question">
