fix overlapping questions, play again button

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                 <button id="startbtn">Start Quiz?</button>
             </div>
         </div>
+        <div id='score-container'>
+        </div>
     </main>
     <script src="./assets/js/script.js"></script>
 </body>
