add high score call

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href=''>View high scores</a>
+        <button id="high-score" href="">View High Scores</button>
         <p>Time: <span></span></p>
     </header>
     <main>
